<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#009688"
        android:fontFamily="@font/rslab"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/my_modules"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/modulebg"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvModule1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:text="@string/c346_android_programming"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/android" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvModule2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/c349_ipad_programming"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ipad" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvModule3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/c286_advanced_web_dev_in_net"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/dotnet" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvModule4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:text="@string/c303_it_project_management"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/projectmgmt" />

    </LinearLayout>

</LinearLayout>